--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -162,6 +162,11 @@ metricbeat.modules:
   period: 10s
   hosts: ["localhost:8500"]
 
+#------------------------------- Coredns Module ------------------------------
+- module: coredns
+  metricsets: ["stats"]
+  period: 10s
+  hosts: ["localhost:9153"]
 
 #------------------------------ Couchbase Module -----------------------------
 - module: couchbase
