--- a/metricbeat/module/coredns/_meta/fields.yml
+++ b/metricbeat/module/coredns/_meta/fields.yml
@@ -1,11 +1,11 @@
 - key: coredns
   title: "coredns"
   description: >
-    experimental[]
-
-    coredns module
+    coredns Module
+  release: beta
   fields:
     - name: coredns
       type: group
       description: >
+        `coredns` contains statistics that were read from coreDNS
       fields:
