Fix mapping issue
Signed-off-by: Chris <chrismarkou92@gmail.com>

--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -162,7 +162,8 @@ metricbeat.modules:
   period: 10s
   hosts: ["localhost:8500"]
 
-#------------------------------- Coredns Module ------------------------------
+
+#------------------------------- coredns Module ------------------------------
 - module: coredns
   metricsets: ["stats"]
   period: 10s
@@ -841,7 +842,7 @@ metricbeat.modules:
 #
 #   event -> filter1 -> event1 -> filter2 ->event2 ...
 #
-# The supported processors are drop_fields, drop_event, include_fields,
+# The supported processors are drop_fields, drop_event, include_fields, 
 # decode_json_fields, and add_cloud_metadata.
 #
 # For example, you can use the following processors to keep the fields that
@@ -932,7 +933,7 @@ metricbeat.modules:
 #    match_pids: ["system.process.ppid"]
 #    target: system.process.parent
 #
-# The following example decodes fields containing JSON strings
+# The following example decodes fields containing JSON strings 
 # and replaces the strings with valid JSON objects.
 #
 #processors:
