Fix Dockerfile & add data generation
Signed-off-by: Chris <chrismarkou92@gmail.com>

Co-Authored-By: Ioannis Androulidakis <ioannis@arrikto.com>

--- a/metricbeat/module/coredns/_meta/Dockerfile
+++ b/metricbeat/module/coredns/_meta/Dockerfile
@@ -1,14 +1,24 @@
 # Start from coredns base Docker image
 FROM coredns/coredns:latest
 
+# create an enhanced container with nc command available since coredns is based
+# on scratch image making healthcheck impossible
+FROM alpine:latest
+COPY --from=0 /coredns /coredns
+# Expose client, management, and cluster ports
 # For DNS
 EXPOSE 53 53/udp
 
 # For Prometheus metrics
 EXPOSE 9153 9153/tcp
 
-# Mount coredns configuration in container
-VOLUME ["/etc/coredns"]
+# Copy coredns configuration in container
+ADD config /etc/coredns
+
+RUN apk add --update --no-cache bind-tools
+
+#HEALTHCHECK --retries=10 CMD dig @0.0.0.0 www.elastic.com >/dev/null
+HEALTHCHECK --interval=1s --retries=10 CMD dig @0.0.0.0 www.elastic.com >/dev/null
 
 # Start coredns with custom configuration file
 ENTRYPOINT ["/coredns"]
