--- a/metricbeat/module/coredns/stats/_meta/fields.yml
+++ b/metricbeat/module/coredns/stats/_meta/fields.yml
@@ -12,8 +12,9 @@
       type: long
       description: >
          Total query count
-    - name: dns.request.duration.sec.bucket
+    - name: dns.request.duration.sec.bucket.*
       type: object
+      object_type: double
       description: >
          Request duration histogram buckets
     - name: dns.request.duration.sec.sum
@@ -25,10 +26,19 @@
       type: long
       description: >
          Requests duration, number of requests
-    - name: dns.request.size.bytes
+    - name: dns.request.size.bytes.bucket.*
       type: object
+      object_type: double
       description: >
          Request Size histogram buckets
+    - name: dns.request.size.bytes.sum
+      type: double
+      description: >
+        Request Size histogram sum
+    - name: dns.request.size.bytes.count
+      type: double
+      description: >
+        Request Size histogram count
     - name: dns.request.do.count.total
       type: long
       description: >
@@ -37,7 +47,7 @@
       type: long
       description: >
           Counter of queries per zone and type
-    - name: dns.request.type
+    - name: type
       type: keyword
       description: >
         Holds the query type of the request
@@ -45,18 +55,27 @@
       type: long
       description: >
         Counter of responses per zone and rcode
-    - name: dns.response.rcode
+    - name: rcode
       type: keyword
       description: >
         Holds the rcode of the response
-    - name: dns.request.family
+    - name: family
       type: keyword
       description: >
         The address family of the transport (1 = IP (IP version 4), 2 = IP6 (IP version 6))
-    - name: dns.response.size.bytes
+    - name: dns.response.size.bytes.bucket.*
       type: object
+      object_type: double
       description: >
           Response Size histogram buckets
+    - name: dns.response.size.bytes.sum
+      type: double
+      description: >
+        Response Size histogram sum
+    - name: dns.response.size.bytes.count
+      type: double
+      description: >
+        Response Size histogram count
     - name: server
       type: keyword
       description: >
