Fix s3 metricset timestamp and sqs queue name

--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -41,3 +41,7 @@
       format: bytes
       description: >
         The size of messages added to a queue.
+    - name: queue.name
+      type: keyword
+      description: >
+        SQS queue name
