--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -5,7 +5,7 @@
   release: beta
   fields:
     - name: oldest_message_age.sec
-      type: long
+      type: scaled_float
       description: >
         The approximate age of the oldest non-deleted message in the queue.
     - name: messages.delayed
@@ -33,7 +33,7 @@
       description: >
         The number of messages added to a queue.
     - name: empty_receives
-      type: long
+      type: scaled_float
       description: >
         The number of ReceiveMessage API calls that did not return a message.
     - name: sent_message_size.bytes
