--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -5,35 +5,35 @@
   release: beta
   fields:
     - name: oldest_message_age.sec
-      type: long
+      type: scaled_float
       description: >
         The approximate age of the oldest non-deleted message in the queue.
-    - name: message.delayed
-      type: long
+    - name: messages.delayed
+      type: scaled_float
       description: >
         TThe number of messages in the queue that are delayed and not available for reading immediately.
-    - name: message.not_visible
-      type: long
+    - name: messages.not_visible
+      type: scaled_float
       description: >
         The number of messages that are in flight.
-    - name: message.visible
-      type: long
+    - name: messages.visible
+      type: scaled_float
       description: >
         The number of messages available for retrieval from the queue.
-    - name: message.deleted
-      type: long
+    - name: messages.deleted
+      type: scaled_float
       description: >
         The number of messages deleted from the queue.
-    - name: message.received
-      type: long
+    - name: messages.received
+      type: scaled_float
       description: >
         The number of messages returned by calls to the ReceiveMessage action.
-    - name: message.sent
-      type: long
+    - name: messages.sent
+      type: scaled_float
       description: >
         The number of messages added to a queue.
     - name: empty_receives
-      type: long
+      type: scaled_float
       description: >
         The number of ReceiveMessage API calls that did not return a message.
     - name: sent_message_size.bytes
