Remove messages.* changes in fields.yml

--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -12,7 +12,7 @@
       type: long
       description: >
         TThe number of messages in the queue that are delayed and not available for reading immediately.
-    - name: messages.not_visible
+    - name: message.not_visible
       type: long
       description: >
         The number of messages that are in flight.
