--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -5,38 +5,38 @@
   release: beta
   fields:
     - name: oldest_message_age.sec
-      type: scaled_float
+      type: long
       description: >
         The approximate age of the oldest non-deleted message in the queue.
     - name: messages.delayed
-      type: scaled_float
+      type: long
       description: >
         TThe number of messages in the queue that are delayed and not available for reading immediately.
     - name: messages.not_visible
-      type: scaled_float
+      type: long
       description: >
         The number of messages that are in flight.
     - name: messages.visible
-      type: scaled_float
+      type: long
       description: >
         The number of messages available for retrieval from the queue.
     - name: messages.deleted
-      type: scaled_float
+      type: long
       description: >
         The number of messages deleted from the queue.
     - name: messages.received
-      type: scaled_float
+      type: long
       description: >
         The number of messages returned by calls to the ReceiveMessage action.
     - name: messages.sent
-      type: scaled_float
+      type: long
       description: >
         The number of messages added to a queue.
     - name: empty_receives
-      type: scaled_float
+      type: long
       description: >
         The number of ReceiveMessage API calls that did not return a message.
     - name: sent_message_size.bytes
-      type: scaled_float
+      type: long
       description: >
         The size of messages added to a queue.
