Just add the missing replicaset.name field for now because of time constraints

--- a/libbeat/processors/add_kubernetes_metadata/_meta/fields.yml
+++ b/libbeat/processors/add_kubernetes_metadata/_meta/fields.yml
@@ -38,10 +38,10 @@
           description: >
             Kubernetes annotations map
 
-        - name: replicaset
-          type: object
+        - name: replicaset.name
+          type: keyword
           description: >
-            Kubernetes replica-set map
+            Kubernetes replica-set name
 
         - name: container.name
           type: keyword
