Fix fields.yml for sqs from message.* to messages.* (#11188)
* Fix fields.yml for sqs from message.* to messages.* and field type
* Change type back to long
* Add format: bytes

--- a/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/fields.yml
@@ -8,27 +8,27 @@
       type: long
       description: >
         The approximate age of the oldest non-deleted message in the queue.
-    - name: message.delayed
+    - name: messages.delayed
       type: long
       description: >
         TThe number of messages in the queue that are delayed and not available for reading immediately.
-    - name: message.not_visible
+    - name: messages.not_visible
       type: long
       description: >
         The number of messages that are in flight.
-    - name: message.visible
+    - name: messages.visible
       type: long
       description: >
         The number of messages available for retrieval from the queue.
-    - name: message.deleted
+    - name: messages.deleted
       type: long
       description: >
         The number of messages deleted from the queue.
-    - name: message.received
+    - name: messages.received
       type: long
       description: >
         The number of messages returned by calls to the ReceiveMessage action.
-    - name: message.sent
+    - name: messages.sent
       type: long
       description: >
         The number of messages added to a queue.
@@ -37,6 +37,7 @@
       description: >
         The number of ReceiveMessage API calls that did not return a message.
     - name: sent_message_size.bytes
-      type: scaled_float
+      type: long
+      format: bytes
       description: >
         The size of messages added to a queue.
