--- a/x-pack/filebeat/module/cisco/asa/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/cisco/asa/ingest/pipeline.yml
@@ -23,7 +23,7 @@ processors:
      field: "_temp_.raw_date"
      ignore_failure: true
      {< if .convert_timezone >}
-     timezone: "{{ beat.timezone }}"
+     timezone: "{{ event.timezone }}"
      {< end >}
      formats: 
       - "MMM  d HH:mm:ss"
