--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -879,6 +879,14 @@ filebeat.inputs:
 # batch of events has been published successfully. The default value is 0s.
 #filebeat.registry.flush: 0s
 
+
+# The new registry format uses a directory to store the filebeat state.
+# Filebeat will automatically migrate a 6.x registry file to the new format on startup.
+# The filebeat.registry.migrate_file setting can be used to point filebeat to the
+# location of the old registry file, in case filebeat.registry.path has been
+# changed when upgrading filebeat.
+#filebeat.registry.migrate_file: ${path.data}/registry
+
 # By default Ingest pipelines are not updated if a pipeline with the same ID
 # already exists. If this option is enabled Filebeat overwrites pipelines
 # everytime a new Elasticsearch connection is established.
