Default beats Kibana dashboards to KQL instead of Lucene

--- a/filebeat/module/nginx/_meta/kibana/7/dashboard/Filebeat-nginx-overview.json
+++ b/filebeat/module/nginx/_meta/kibana/7/dashboard/Filebeat-nginx-overview.json
@@ -8,10 +8,8 @@
                         "filter": [], 
                         "index": "filebeat-*", 
                         "query": {
-                            "query_string": {
-                                "analyze_wildcard": true, 
-                                "query": "*"
-                            }
+                            "language": "kuery",
+                            "query": ""
                         }
                     }
                 }, 
@@ -76,11 +74,8 @@
                         "filter": [], 
                         "index": "filebeat-*", 
                         "query": {
-                            "query_string": {
-                                "analyze_wildcard": true, 
-                                "query": "*"
-                            }
-                        }
+                            "language": "kuery",
+                            "query": ""
                     }
                 }, 
                 "title": "Operating systems breakdown [Filebeat Nginx] ECS", 
@@ -524,13 +519,8 @@
                         "highlightAll": true, 
                         "index": "filebeat-*", 
                         "query": {
-                            "language": "lucene", 
-                            "query": {
-                                "query_string": {
-                                    "analyze_wildcard": true, 
+                            "language": "kuery",
                                     "query": "event.module:nginx"
-                                }
-                            }
                         }, 
                         "version": true
                     }
@@ -555,13 +545,8 @@
                         "filter": [], 
                         "highlightAll": true, 
                         "query": {
-                            "language": "lucene", 
-                            "query": {
-                                "query_string": {
-                                    "analyze_wildcard": true, 
-                                    "query": "*"
-                                }
-                            }
+                            "language": "kuery",
+                            "query": ""
                         }, 
                         "version": true
                     }
