--- a/libbeat/kibana/testdata/fields.yml
+++ b/libbeat/kibana/testdata/fields.yml
@@ -24,6 +24,8 @@
           value: "_a=(query:(query_string:(analyze_wildcard:!t,query:'error.grouping_key:%22{{value}}%22')))"
         - min_version: 6.0.0
           value: "_a=(query:(language:lucene,query:'context.app.name:\"{{value}}\"'))"
+        - min_version: 7.0.0
+          value: "_a=(query:(language:kuery,query:'context.app.name:\"{{value}}\"'))"
 
     - name: alias
       type: alias
