add support for working, failed and spare disks in raid metricset

--- a/metricbeat/module/system/raid/_meta/fields.yml
+++ b/metricbeat/module/system/raid/_meta/fields.yml
@@ -16,6 +16,18 @@
       type: long
       description: >
          Number of active disks.
+    - name: disks.working
+      type: long
+      description: >
+         Number of working disks.
+    - name: disks.failed
+      type: long
+      description: >
+         Number of failed disks.
+    - name: disks.spare
+      type: long
+      description: >
+         Number of spare disks.
     - name: disks.total
       type: long
       description: >
