--- a/x-pack/filebeat/module/cisco/module.yml
+++ b/x-pack/filebeat/module/cisco/module.yml
@@ -1,5 +1,3 @@
 dashboards:
-- id: ceefb9e0-1f51-11e9-93ed-f7e068f4aebb
-  file: Filebeat-Iptables-Overview.json
-- id: d39f0980-1ff3-11e9-ae2a-939083c6a64e
-  file: Filebeat-Iptables-Ubiquiti-Firewall-Overview.json
+- id: a555b160-4987-11e9-b8ce-ed898b5ef295
+  file: Filebeat-Cisco-ASA.json
