--- a/x-pack/filebeat/module/cisco/asa/_meta/fields.yml
+++ b/x-pack/filebeat/module/cisco/asa/_meta/fields.yml
@@ -7,63 +7,74 @@
     type: keyword
     description: >
       The Cisco ASA message identifier.
-      TODO: Maybe a long?
 
   - name: suffix
     type: keyword
+    example: session
     description: >
-      Suffix after %ASA identifier. Usually `session`.
+      Optional suffix after %ASA identifier.
 
   - name: source_interface
     type: keyword
-    description: TODO migrate to ECS?
+    description: >
+      Source interface for the flow or event.
 
   - name: destination_interface
     type: keyword
-    description: TODO migrate to ECS?
+    description: >
+      Destination interface for the flow or event.
 
   - name: list_id
     type: keyword
-    description: TODO
+    description: >
+      Name of the Access Control List that matched this event.
 
   - name: source_username
     type: keyword
-    description: TODO
+    description: >
+      Name of the user that is the source for this event.
 
   - name: destination_username
     type: keyword
-    description: TODO
+    description: >
+      Name of the user that is the destination for this event.
 
   - name: mapped_source_ip
     type: ip
-    description: TODO
+    description: >
+      The translated source IP address.
 
   - name: mapped_source_port
     type: long
-    description: TODO
+    description: >
+      The translated source port.
 
   - name: mapped_destination_ip
     type: ip
-    description: TODO
+    description: >
+      The translated destination IP address.
 
   - name: mapped_destination_port
     type: long
-    description: TODO
+    description: >
+      The translated destination port.
 
   - name: threat_level
     type: keyword
-    description: TODO
+    description: >
+      Threat level for malware / botnet traffic. One of very-low, low,
+      moderate, high or very-high.
 
   - name: threat_category
     type: keyword
-    description: TODO
+    description: >
+      Category for the malware / botnet traffic. For example: virus, botnet,
+      trojan, etc.
 
   - name: connection_id
     type: keyword
-    description: TODO
-
-  - name: threat_domain
-    description: TODO
+    description: >
+      Unique identifier for a flow.
 
   - name: icmp_type
     type: short
