--- a/heartbeat/heartbeat.yml
+++ b/heartbeat/heartbeat.yml
@@ -154,5 +154,5 @@ output.elasticsearch:
 
 #================================= Migration ==================================
 
-# This allows to enable migration aliases
-#migration.enabled: false
+# This allows to enable 6.7 migration aliases
+#migration.6_to_7.enabled: false
