--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -244,7 +244,7 @@ metricbeat.modules:
 
 #-------------------------------- Etcd Module --------------------------------
 - module: etcd
-  metricsets: ["leader", "self", "store"]
+  metricsets: ["metrics"]
   period: 10s
   hosts: ["localhost:2379"]
 
