Coredns metricbeat module (#10585)
Co-Authored-By: Ioannis Androulidakis <ioannis@arrikto.com>

--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -183,6 +183,12 @@ metricbeat.modules:
   hosts: ["localhost:8500"]
 
 
+#------------------------------- Coredns Module -------------------------------
+- module: coredns
+  metricsets: ["stats"]
+  period: 10s
+  hosts: ["localhost:9153"]
+
 #------------------------------ Couchbase Module ------------------------------
 - module: couchbase
   metricsets: ["bucket", "cluster", "node"]
