--- a/x-pack/filebeat/module/coredns/kubernetes/config/coredns.yml
+++ b/x-pack/filebeat/module/coredns/kubernetes/config/coredns.yml
@@ -7,7 +7,7 @@ tags: {{.tags}}
 json.keys_under_root: true
 processors:
   - dissect:
-      tokenizer: "%{timestamp} [%{log.level}] %{source.address}:%{source.port} - %{coredns.id} \"%{coredns.query.type} %{coredns.query.class} %{coredns.query.name} %{network.transport} %{coredns.query.size} %{coredns.dnssec_ok} %{bufsize}\" %{coredns.response.code} %{coredns.response.flags} %{coredns.response.size} %{coredns.duration}s"
+      tokenizer: "%{timestamp} [%{log.level}] %{temp.source} - %{coredns.id} \"%{coredns.query.type} %{coredns.query.class} %{coredns.query.name} %{network.transport} %{coredns.query.size} %{coredns.dnssec_ok} %{bufsize}\" %{coredns.response.code} %{coredns.response.flags} %{coredns.response.size} %{coredns.duration}s"
       field: "message"
       target_prefix: ""
 
