revert to etcd GA metrics as default

--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -250,7 +250,7 @@ metricbeat.modules:
 
 #-------------------------------- Etcd Module --------------------------------
 - module: etcd
-  metricsets: ["metrics"]
+  metricsets: ["leader", "self", "store"]
   period: 10s
   hosts: ["localhost:2379"]
 
