--- a/metricbeat/module/etcd/metrics/_meta/fields.yml
+++ b/metricbeat/module/etcd/metrics/_meta/fields.yml
@@ -2,7 +2,7 @@
   type: group
   description: >
     Etcd metrics from the /metrics endpoint
-  release: ga
+  release: beta
   fields:
     # SERVER
 
@@ -11,86 +11,90 @@
       description: >
         Whether a leader exists in the cluster
 
-    - name: server.leader_changes_seen_total
-      type: integer
+    - name: server.leader_changes.count
+      type: long
       description: >
         Number of leader changes seen at the cluster
 
-    - name: server.proposals_committed_total
+    - name: server.proposals_committed.count
       type: long
       description: >
-        Total number of consensus proposals commited
+        Number of consensus proposals commited
 
-    - name: server.proposals_failed_total
+    - name: server.proposals_pending.count
       type: long
       description: >
-        Total number of consensus proposals failed
+        Number of consensus proposals pending
 
-    - name: server.proposals_pending
+    - name: server.proposals_failed.count
       type: long
       description: >
-        Total number of consensus proposals pending
+        Number of consensus proposals failed
 
-    - name: server.grpc_handled_total
+    - name: server.grpc_started.count
       type: long
       description: >
-        Total number of received gRPC requests
+        Number of sent gRPC requests
 
-    - name: server.grpc_started_total
+    - name: server.grpc_handled.count
       type: long
       description: >
-        Total number of sent gRPC requests
+        Number of received gRPC requests
 
     # DISK
 
-    - name: disk.mvcc_db_total_size_in_bytes
+    - name: disk.mvcc_db_total_size.bytes
       type: long
+      format: bytes
       description: >
         Size of stored data at MVCC
 
-    - name: disk.wal_fsync_duration_ns.bucket.*
+    - name: disk.wal_fsync_duration.ns.bucket.*
       type: object
       object_type: long
       description: >
         Latency for writing ahead logs to disk
-    - name: disk.wal_fsync_duration_ns.count
+    - name: disk.wal_fsync_duration.ns.count
       type: long
       description: >
         Write ahead logs count
-    - name: disk.wal_fsync_duration_ns.sum
-      type: scaled_float
+    - name: disk.wal_fsync_duration.ns.sum
+      type: long
       description: >
         Write ahead logs latency sum
 
-    - name: disk.backend_commit_duration_ns.bucket.*
+    - name: disk.backend_commit_duration.ns.bucket.*
       type: object
       object_type: long
       description: >
         Latency for writing backend changes to disk
-    - name: disk.backend_commit_duration_ns.count
+    - name: disk.backend_commit_duration.ns.count
       type: long
       description: >
         Backend commits count
-    - name: disk.backend_commit_duration_ns.sum
-      type: scaled_float
+    - name: disk.backend_commit_duration.ns.sum
+      type: long
       description: >
         Backend commits latency sum
 
     # MEMORY
 
-    - name: memory.go_memstats_alloc_bytes
+    - name: memory.go_memstats_alloc.bytes
       type: long
+      format: bytes
       description: >
         Memory allocated bytes as of MemStats Go
 
     # NETWORK
 
-    - name: network.client_grpc_received_bytes_total
+    - name: network.client_grpc_sent.bytes
       type: long
-      description: >
-        gRPC received bytes total
-
-    - name: network.client_grpc_sent_bytes_total
-      type: long
+      format: bytes
       description: >
         gRPC sent bytes total
+
+    - name: network.client_grpc_received.bytes
+      type: long
+      format: bytes
+      description: >
+        gRPC received bytes total
