--- a/packetbeat/packetbeat.yml
+++ b/packetbeat/packetbeat.yml
@@ -229,6 +229,13 @@ processors:
 # following line.
 #xpack.monitoring.elasticsearch:
 
+#============================= Process Security ================================
+
+# Enable or disable seccomp system call filtering on Linux. Default is enabled.
+# Seccomp is disabled in order to help with setting of promiscuous mode.
+# If you enable seccomp you will need to enable promiscuous on the device manually.
+seccomp.enabled: false
+
 #================================= Migration ==================================
 
 # This allows to enable 6.7 migration aliases
