--- a/packetbeat/packetbeat.reference.yml
+++ b/packetbeat/packetbeat.reference.yml
@@ -705,8 +705,8 @@ packetbeat.ignore_outgoing: false
 #    fields:
 #        - from: message
 #          to: message_copied
-#    fail_on_error: false
-#    ignore_missing: true
+#    fail_on_error: true
+#    ignore_missing: false
 
 #============================= Elastic Cloud ==================================
 
