--- a/x-pack/auditbeat/auditbeat.reference.yml
+++ b/x-pack/auditbeat/auditbeat.reference.yml
@@ -372,8 +372,8 @@ auditbeat.modules:
 #    fields:
 #        - from: message
 #          to: message_copied
-#    fail_on_error: false
-#    ignore_missing: true
+#    fail_on_error: true
+#    ignore_missing: false
 
 #============================= Elastic Cloud ==================================
 
