--- a/winlogbeat/winlogbeat.reference.yml
+++ b/winlogbeat/winlogbeat.reference.yml
@@ -254,8 +254,8 @@ winlogbeat.event_logs:
 #    fields:
 #        - from: message
 #          to: message_copied
-#    fail_on_error: false
-#    ignore_missing: true
+#    fail_on_error: true
+#    ignore_missing: false
 
 #============================= Elastic Cloud ==================================
 
