--- a/packetbeat/_meta/beat.yml
+++ b/packetbeat/_meta/beat.yml
@@ -107,3 +107,10 @@ setup.template.settings:
   index.number_of_shards: 1
   #index.codec: best_compression
   #_source.enabled: false
+
+#============================= Process Security ================================
+
+# Enable or disable seccomp system call filtering on Linux. Default is enabled.
+# Seccomp is disabled in order to help with setting of promiscuous mode.
+# If you enable seccomp you will need to enable promiscuous on the device manually.
+seccomp.enabled: false
