Make LS integration test health check consistent with system test one

--- a/metricbeat/module/logstash/_meta/Dockerfile
+++ b/metricbeat/module/logstash/_meta/Dockerfile
@@ -2,4 +2,4 @@ FROM docker.elastic.co/logstash/logstash:6.6.0
 
 COPY healthcheck.sh /
 ENV XPACK_MONITORING_ENABLED=FALSE
-HEALTHCHECK --interval=1s --retries=300 CMD sh /healthcheck.sh
+HEALTHCHECK --interval=1s --retries=300 CMD curl -f http://localhost:9600/_node/stats
