--- a/testing/environments/snapshot.yml
+++ b/testing/environments/snapshot.yml
@@ -5,7 +5,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.0.0-SNAPSHOT
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      test: ["CMD", "curl", "-f", "http://localhost:9200/_xpack/license"]
       retries: 300
       interval: 1s
     environment:
