--- a/metricbeat/module/etcd/metrics/_meta/fields.yml
+++ b/metricbeat/module/etcd/metrics/_meta/fields.yml
@@ -1,99 +1,113 @@
-- name: metrics
+- name: server
   type: group
   description: >
-    Etcd metrics from the /metrics endpoint
+    Server metrics from the Etcd V3 /metrics endpoint
   release: beta
   fields:
-    # SERVER
-
-    - name: server.has_leader
+    - name: has_leader
       type: byte
       description: >
         Whether a leader exists in the cluster
 
-    - name: server.leader_changes.count
+    - name: leader_changes.count
       type: long
       description: >
         Number of leader changes seen at the cluster
 
-    - name: server.proposals_committed.count
+    - name: proposals_committed.count
       type: long
       description: >
         Number of consensus proposals commited
 
-    - name: server.proposals_pending.count
+    - name: proposals_pending.count
       type: long
       description: >
         Number of consensus proposals pending
 
-    - name: server.proposals_failed.count
+    - name: proposals_failed.count
       type: long
       description: >
         Number of consensus proposals failed
 
-    - name: server.grpc_started.count
+    - name: grpc_started.count
       type: long
       description: >
         Number of sent gRPC requests
 
-    - name: server.grpc_handled.count
+    - name: grpc_handled.count
       type: long
       description: >
         Number of received gRPC requests
 
-    # DISK
-
-    - name: disk.mvcc_db_total_size.bytes
+- name: disk
+  type: group
+  description: >
+    Disk metrics from the Etcd V3 /metrics endpoint
+  release: beta
+  fields:
+    - name: mvcc_db_total_size.bytes
       type: long
       format: bytes
       description: >
         Size of stored data at MVCC
 
-    - name: disk.wal_fsync_duration.ns.bucket.*
+    - name: wal_fsync_duration.ns.bucket.*
       type: object
       object_type: long
       description: >
         Latency for writing ahead logs to disk
-    - name: disk.wal_fsync_duration.ns.count
+
+    - name: wal_fsync_duration.ns.count
       type: long
       description: >
         Write ahead logs count
-    - name: disk.wal_fsync_duration.ns.sum
+    
+    - name: wal_fsync_duration.ns.sum
       type: long
       description: >
         Write ahead logs latency sum
 
-    - name: disk.backend_commit_duration.ns.bucket.*
+    - name: backend_commit_duration.ns.bucket.*
       type: object
       object_type: long
       description: >
         Latency for writing backend changes to disk
-    - name: disk.backend_commit_duration.ns.count
+
+    - name: backend_commit_duration.ns.count
       type: long
       description: >
         Backend commits count
-    - name: disk.backend_commit_duration.ns.sum
+    
+    - name: backend_commit_duration.ns.sum
       type: long
       description: >
         Backend commits latency sum
 
-    # MEMORY
-
-    - name: memory.go_memstats_alloc.bytes
+- name: memory
+  type: group
+  description: >
+    Memory metrics from the Etcd V3 /metrics endpoint
+  release: beta
+  fields:
+    - name: go_memstats_alloc.bytes
       type: long
       format: bytes
       description: >
         Memory allocated bytes as of MemStats Go
 
-    # NETWORK
-
-    - name: network.client_grpc_sent.bytes
+- name: network
+  type: group
+  description: >
+    Network metrics from the Etcd V3 /metrics endpoint
+  release: beta
+  fields:
+    - name: client_grpc_sent.bytes
       type: long
       format: bytes
       description: >
         gRPC sent bytes total
 
-    - name: network.client_grpc_received.bytes
+    - name: client_grpc_received.bytes
       type: long
       format: bytes
       description: >
