Fix wrong module name

--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -82,7 +82,7 @@ filebeat.modules:
     # can be added under this section.
     #input:
 
-#----------------------------- Cisco Fields Module -----------------------------
+#-------------------------------- Cisco Module --------------------------------
 - module: cisco
   asa:
     enabled: true
