--- a/x-pack/filebeat/module/cisco/_meta/fields.yml
+++ b/x-pack/filebeat/module/cisco/_meta/fields.yml
@@ -1,5 +1,5 @@
 - key: cisco
-  title: Cisco fields
+  title: Cisco
   description: >
     Module for handling Cisco network device logs.
   fields:
