Use a different key for jolokia module and jolokia autodiscover

--- a/libbeat/autodiscover/providers/jolokia/_meta/fields.yml
+++ b/libbeat/autodiscover/providers/jolokia/_meta/fields.yml
@@ -1,4 +1,4 @@
-- key: jolokia
+- key: jolokia-autodiscover
   title: Jolokia Discovery autodiscover provider
   description: >
     Metadata from Jolokia Discovery added by the jolokia provider.
