work in progress

--- a/metricbeat/module/iis/_meta/config.yml
+++ b/metricbeat/module/iis/_meta/config.yml
@@ -1,6 +1,7 @@
 - module: iis
-  metricsets: ["system"]
+  metricsets:
+    - webserver
+    - website
   enabled: true
   period: 10s
-  hosts: ["localhost"]
 
