--- a/metricbeat/module/iis/website/_meta/fields.yml
+++ b/metricbeat/module/iis/website/_meta/fields.yml
@@ -1,7 +1,7 @@
-- name: system
+- name: website
   type: group
   description: >
-    system
+    website
   fields:
     - name: example
       type: keyword
