--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -51,7 +51,7 @@ metricbeat.modules:
 - module: system
   metricsets:
     - cpu             # CPU usage
-    - load            # CPU load averages
+    #- load            # CPU load averages
     - memory          # Memory usage
     - network         # Network IO
     - process         # Per process metrics
@@ -298,10 +298,11 @@ metricbeat.modules:
 
 #--------------------------------- iis Module --------------------------------
 - module: iis
-  metricsets: ["system"]
+  metricsets:
+    - webserver
+    - website
   enabled: true
   period: 10s
-  hosts: ["localhost"]
 
 
 #------------------------------- Jolokia Module ------------------------------
