nginx.access.remote_ip should have been an alias to source.address

--- a/filebeat/module/nginx/access/_meta/fields.yml
+++ b/filebeat/module/nginx/access/_meta/fields.yml
@@ -16,7 +16,7 @@
       migration: true
     - name: remote_ip
       type: alias
-      path: source.ip
+      path: source.address
       migration: true
     - name: user_name
       type: alias
