--- a/filebeat/module/nginx/_meta/kibana/7/dashboard/ml-nginx-remote-ip-url-explorer.json
+++ b/filebeat/module/nginx/_meta/kibana/7/dashboard/ml-nginx-remote-ip-url-explorer.json
@@ -230,7 +230,7 @@
                             "enabled": true, 
                             "id": "2", 
                             "params": {
-                                "field": "nginx.access.remote_ip", 
+                                "field": "source.address", 
                                 "order": "desc", 
                                 "orderBy": "1", 
                                 "size": 5
